foo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: foo
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: foo
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: foo
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: "30%"
  template:
    metadata:
      labels:
        app: foo
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: foo
          image: kennethreitz/httpbin
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: foo
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
      nodePort: 30111
  selector:
    app: foo
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: foo
  namespace: foo
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - path: /foo/
        backend:
          serviceName: foo
          servicePort: 80
